--- a/main/templates/main/cv_detail.html
+++ b/main/templates/main/cv_detail.html
@@ -88,6 +88,13 @@
         </div>
     </div>
 
+    <footer class="center-align" style="margin-top: 32px; color: #888; font-size: 0.95em;">
+        <div>
+            <strong>Debug:</strong> {{ settings.DEBUG }} &nbsp;|&nbsp;
+            <strong>Language:</strong> {{ settings.LANGUAGE_CODE }}
+        </div>
+    </footer>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
