--- a/main/templates/main/cv_pdf.html
+++ b/main/templates/main/cv_pdf.html
@@ -74,5 +74,8 @@
             </ul>
         </div>
     </div>
+    <div style="margin-top: 32px; color: #888; font-size: 0.95em; text-align: center;">
+        Version: {{ settings.APP_VERSION|default:"unknown" }}
+    </div>
 </body>
 </html>
