Celery and Redis brocker

--- a/main/templates/main/cv_detail.html
+++ b/main/templates/main/cv_detail.html
@@ -82,6 +82,18 @@
                     <a href="{% url 'cv_pdf' pk=cv.pk %}" class="btn blue" style="margin-bottom: 16px;">
                         <i class="material-icons left">picture_as_pdf</i> Download PDF
                     </a>
+                    <form method="post" action="{% url 'send_cv_email' pk=cv.pk %}" class="row" style="margin-top:2rem;">
+                        {% csrf_token %}
+                        <div class="input-field col s9">
+                            <input type="email" name="email" id="email" required>
+                            <label for="email">Email to send PDF</label>
+                        </div>
+                        <div class="col s3">
+                            <button type="submit" class="btn blue waves-effect waves-light">
+                                <i class="material-icons left">send</i> Send PDF to Email
+                            </button>
+                        </div>
+                    </form>
                     </div>
                 </div>
             </div>
